--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <h1>我是一级标题</h1>
+<input type="button" value="A" onclick="alert('B')">
 
     <p>
       这是一个段落文本。在文本中有一个 <span>span element</span> 并且还有一个
