--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>我是一级标题</h1>
 <input type="button" value="A" onclick="alert('B')">
-
+<a href="javascript:alert('warning.');">clickme</a>
     <p>
       这是一个段落文本。在文本中有一个 <span>span element</span> 并且还有一个
       <a href="http://example.com">链接</a>.
